<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mi_add_item_to_list"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/mi_add"/>
    
	<item 
	    android:id="@+id/mi_add_list"
	    app:showAsAction="never"
	    android:title="@string/mi_add_list"/>
    <item
        android:id="@+id/mi_del_list"
        app:showAsAction="never"
        android:title="@string/mi_delete_list"/>
	<item
        android:id="@+id/mi_edit_list"
        app:showAsAction="never"
        android:title="@string/mi_edit_list"/>
	<item
        android:id="@+id/mi_clear_list"
        app:showAsAction="never"
        android:title="@string/mi_clear_list"/>
	<item
        android:id="@+id/mi_edit_items"
        app:showAsAction="never"
        android:title="@string/mi_edit_items"/>
	
	<item
        android:id="@+id/mi_settings"
        app:showAsAction="never"
        android:title="@string/mi_settings"
        android:icon="@android:drawable/ic_menu_preferences"/>
</menu>
