<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <EditText
        android:id="@+id/list_for_recipe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginLeft="@dimen/view_horizontal_margin"
        android:layout_marginRight="@dimen/view_horizontal_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:hint="@string/list_for_recipe" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:checked="true"
        android:text="@string/cbx_use_recipe_name"
        android:id="@+id/cbx_use_recipe_name" >
        <requestFocus/>
    </CheckBox>

    <EditText
        android:id="@+id/category_for_recipe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginLeft="@dimen/view_horizontal_margin"
        android:layout_marginRight="@dimen/view_horizontal_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:hint="@string/category_for_recipe" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/cbx_add_recipe_save_as_default"
        android:id="@+id/cbx_add_recipe_save_as_default" />
</LinearLayout>