<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/new_item_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginLeft="@dimen/view_horizontal_margin"
        android:layout_marginRight="@dimen/view_horizontal_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:hint="@string/item_name" >
        <requestFocus />
    </EditText>
    
    <AutoCompleteTextView
        android:id="@+id/item_category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginLeft="@dimen/view_horizontal_margin"
        android:layout_marginRight="@dimen/view_horizontal_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:hint="@string/item_category"
        android:textColor="#000000"
        />
    
    <Spinner
        android:id="@+id/new_item_qty_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginLeft="@dimen/view_horizontal_margin"
        android:layout_marginRight="@dimen/view_horizontal_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin" />
    
      <EditText
        android:id="@+id/new_item_qty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_margin"
        android:layout_marginLeft="@dimen/view_horizontal_margin"
        android:layout_marginRight="@dimen/view_horizontal_margin"
        android:layout_marginBottom="@dimen/view_vertical_margin"
        android:hint="@string/list_item_qty" >
        <requestFocus />
    </EditText>

</LinearLayout>
