<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipe">

    <android.support.v7.widget.Toolbar
        android:background="@color/primary"
        android:id="@+id/recipe_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_recipe_layout">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="80"
                android:id="@+id/recipe_url"
                android:inputType="textUri"
                android:hint="@string/hint_url"/>
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:text="@string/btn_get_url"
                android:id="@+id/btn_get_recipe"
                />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_recipe"
        android:id="@+id/btn_add_recipe"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:theme="@style/AppTheme"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recipe_list"
        android:layout_centerVertical="true"
        android:layout_below="@id/recipe_toolbar"
        android:layout_above="@id/btn_add_recipe"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar_recipe"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
